--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: cdn.pitnia+
 description: CDN system for pitnia+
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://www.pitnia.com/images/-EG2dWaGmDF0/YNa6P5fob3I/AAAAAAAAAMs/Da5rw4ByFA804O-i9D4umT-jd7KbQufggCPcBGAYYCw/w300-rw/pitnia.png
+avatar: https://scontent.fkno9-1.fna.fbcdn.net/v/t1.6435-9/171744159_123286256506385_7869524182363788111_n.png?_nc_cat=110&ccb=1-5&_nc_sid=973b4a&_nc_ohc=hnFEr0TRBZUAX9-GjwW&_nc_ht=scontent.fkno9-1.fna&oh=4931bdf1892ca4208114940a713cab17&oe=615A5968
 
 #
 # Flags below are optional
